fix: Validate uniqueness of versions during discovery and within applied migrations. (#1990)
This adds validation of uniqueness of versions to the discovery and
validation phase of the applied migrations. Also, it enhances the repair
command with the suggested fix in #1988. This fix is done before all
other fixes, so that the expected list of versions are aligned.

Also, while it would be possible to fix for all duplicates within one
Cypher statement, we don’t, as we cannot ensure the same order of
migration versions (lexicographic or semantic order).

Closes #1988.

Signed-off-by: Michael Simons <michael@simons.ac>